--- a/root_attribute_pattern.yaml
+++ b/root_attribute_pattern.yaml
@@ -11,11 +11,11 @@ CHILDREN:
       NODE: "AEA"
       CHILDREN:
       - NAME: "WhiteBox"
-      - NODE: "AEA"
+        NODE: "AEA"
       - NAME: "Proxy"
-      - NODE: "AEA"
+        NODE: "AEA"
       - NAME: "Query"
-      - NODE: "AEA"
+        NODE: "AEA"
       WEIGHTS:
       - 0.1
       - 0.5
@@ -24,11 +24,11 @@ CHILDREN:
       NODE: "AEA"
       CHILDREN:
       - NAME: "WhiteBox"
-      - NODE: "AEA"
+        NODE: "AEA"
       - NAME: "Proxy"
-      - NODE: "AEA"
+        NODE: "AEA"
       - NAME: "Query"
-      - NODE: "AEA"
+        NODE: "AEA"
       WEIGHTS:
       - 0.1
       - 0.5
@@ -43,11 +43,11 @@ CHILDREN:
       NODE: "AEA"
       CHILDREN:
       - NAME: "WhiteBox"
-      - NODE: "AEA"
+        NODE: "AEA"
       - NAME: "Proxy"
-      - NODE: "AEA"
+        NODE: "AEA"
       - NAME: "Query"
-      - NODE: "AEA"
+        NODE: "AEA"
       WEIGHTS:
       - 0.1
       - 0.5
@@ -56,11 +56,11 @@ CHILDREN:
       NODE: "AEA"
       CHILDREN:
       - NAME: "WhiteBox"
-      - NODE: "AEA"
+        NODE: "AEA"
       - NAME: "Proxy"
-      - NODE: "AEA"
+        NODE: "AEA"
       - NAME: "Query"
-      - NODE: "AEA"
+        NODE: "AEA"
       WEIGHTS:
       - 0.1
       - 0.5
@@ -81,11 +81,11 @@ CHILDREN:
       NODE: "AEA"
       CHILDREN:
       - NAME: "WhiteBox"
-      - NODE: "AEA"
+        NODE: "AEA"
       - NAME: "Proxy"
-      - NODE: "AEA"
+        NODE: "AEA"
       - NAME: "Query"
-      - NODE: "AEA"
+        NODE: "AEA"
       WEIGHTS:
       - 0.1
       - 0.5
@@ -94,11 +94,11 @@ CHILDREN:
       NODE: "AEA"
       CHILDREN:
       - NAME: "WhiteBox"
-      - NODE: "AEA"
+        NODE: "AEA"
       - NAME: "Proxy"
-      - NODE: "AEA"
+        NODE: "AEA"
       - NAME: "Query"
-      - NODE: "AEA"
+        NODE: "AEA"
       WEIGHTS:
       - 0.1
       - 0.5
@@ -113,11 +113,11 @@ CHILDREN:
       NODE: "AEA"
       CHILDREN:
       - NAME: "WhiteBox"
-      - NODE: "AEA"
+        NODE: "AEA"
       - NAME: "Proxy"
-      - NODE: "AEA"
+        NODE: "AEA"
       - NAME: "Query"
-      - NODE: "AEA"
+        NODE: "AEA"
       WEIGHTS:
       - 0.1
       - 0.5
@@ -126,11 +126,11 @@ CHILDREN:
       NODE: "AEA"
       CHILDREN:
       - NAME: "WhiteBox"
-      - NODE: "AEA"
+        NODE: "AEA"
       - NAME: "Proxy"
-      - NODE: "AEA"
+        NODE: "AEA"
       - NAME: "Query"
-      - NODE: "AEA"
+        NODE: "AEA"
       WEIGHTS:
       - 0.1
       - 0.5
