--- a/chestXRay/at4ea.yaml
+++ b/chestXRay/at4ea.yaml
@@ -235,7 +235,7 @@ CHILDREN:
       - NAME: "Proxy"
         NODE: "AEA"
         CHILDREN:
-        - NAME: "MITM-RealTime-white"
+        - NAME: "MITM-RealTime-proxy"
           NODE: "Scenario"
           CHILDREN:
           - NODE: "AEML"
