--- a/fashionMNIST/at4ea.yaml
+++ b/fashionMNIST/at4ea.yaml
@@ -95,7 +95,7 @@ CHILDREN:
             - NAME: "Confirm Output Space"
               NODE: "CA"
               AP: 0.08
-              QUERY: 0
+              QUERY: 50
             - NAME: "Collect Public Dataset"
               NODE: "CA"
               AP: 0.08
@@ -162,7 +162,7 @@ CHILDREN:
       - NAME: "WhiteBox"
         NODE: "AEA"
         CHILDREN:
-        - NAME: "Send AE by API proxy"
+        - NAME: "Send AE as Stickers white"
           NODE: "Scenario"
           CHILDREN:
           - NODE: "AEML"
@@ -187,7 +187,7 @@ CHILDREN:
       - NAME: "Proxy"
         NODE: "AEA"
         CHILDREN:
-        - NAME: "Send AE by API proxy"
+        - NAME: "Send AE as Stickers proxy"
           NODE: "Scenario"
           CHILDREN:
           - NODE: "AEML"
@@ -214,7 +214,7 @@ CHILDREN:
             - NAME: "Confirm Output Space"
               NODE: "CA"
               AP: 0.08
-              QUERY: 0
+              QUERY: 50
             - NAME: "Collect Public Dataset"
               NODE: "CA"
               AP: 0.08
