--- a/fashionMNIST/at4ea.yaml
+++ b/fashionMNIST/at4ea.yaml
@@ -21,22 +21,22 @@ CHILDREN:
             - NAME: "BIM"
               NODE: "AEM"
               ERR: 0.26
-              AP: 0.9
+              FREQ: 0.9
               QUERY: 0
             - NAME: "CW"
               NODE: "AEM"
               ERR: 0.32
-              AP: 0.9
+              FREQ: 0.9
               QUERY: 0
             - NAME: "DeepFool"
               NODE: "AEM"
               ERR: 0.22
-              AP: 0.9
+              FREQ: 0.9
               QUERY: 0
             - NAME: "PGD"
               NODE: "AEM"
               ERR: 0.52
-              AP: 0.9
+              FREQ: 0.9
               QUERY: 0
           - NODE: "CAL"
             CHILDREN:
@@ -61,22 +61,22 @@ CHILDREN:
             - NAME: "BIM"
               NODE: "AEM"
               ERR: 0.36
-              AP: 0.9
+              FREQ: 0.9
               QUERY: 0
             - NAME: "CW"
               NODE: "AEM"
               ERR: 0.22
-              AP: 0.9
+              FREQ: 0.9
               QUERY: 0
             - NAME: "DeepFool"
               NODE: "AEM"
               ERR: 0.08
-              AP: 0.9
+              FREQ: 0.9
               QUERY: 0
             - NAME: "PGD"
               NODE: "AEM"
               ERR: 0.78
-              AP: 0.9
+              FREQ: 0.9
               QUERY: 0
           - NODE: "CAL"
             CHILDREN:
@@ -113,22 +113,22 @@ CHILDREN:
             - NAME: "Boundary Attack"
               NODE: "AEM"
               ERR: 0.6
-              AP: 0.9
+              FREQ: 0.9
               QUERY: 1000
             - NAME: "GeoDA"
               NODE: "AEM"
               ERR: 0.4
-              AP: 0.9
+              FREQ: 0.9
               QUERY: 300
             - NAME: "HopSkipJump Attack"
               NODE: "AEM"
               ERR: 0.32
-              AP: 0.9
+              FREQ: 0.9
               QUERY: 500
             - NAME: "SimBA"
               NODE: "AEM"
               ERR: 0.56
-              AP: 0.9
+              FREQ: 0.9
               QUERY: 100
           - NODE: "CAL"
             CHILDREN:
@@ -170,7 +170,7 @@ CHILDREN:
             - NAME: "Adversarial Patch"
               NODE: "AEM"
               ERR: 0.16
-              AP: 0.9
+              FREQ: 0.9
               QUERY: 0
           - NODE: "CAL"
             CHILDREN:
@@ -195,7 +195,7 @@ CHILDREN:
             - NAME: "Adversarial Patch"
               NODE: "AEM"
               ERR: 0.14
-              AP: 0.9
+              FREQ: 0.9
               QUERY: 0
           - NODE: "CAL"
             CHILDREN:
